fixed mobile view not fit to screen when toggle to sidebar modal

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -435,6 +435,10 @@ div.mansory-item p span { background: #696869;padding: 4px 10px;border-radius: 5
 .sidebar-modal .main__post p a { font-weight: 600;color: var(---primary); }
 .sidebar-modal .main__post img { width: 100%;height: 300px;object-fit: cover;border-radius: 11px; }
 
+@media only screen and (max-width: 700px) {
+  .sidebar-modal aside { width: 100% !important; }
+}
+
 /* Animation Keyframes */
 @keyframes fadeLeft {
   from { opacity: 0.8;transform: translateX(80%); }
